force-app/main/default/objects/sansancard__TransferMeta__c/sansancard__TransferMeta__c.object-meta.xml
<CustomObject>
    <label>Transfer Metadata</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>