force-app/main/default/objects/sansancard__TransferMeta__c/fields/sansancard__DisplayField__c.field-meta.xml
<CustomField>
    <fullName>sansancard__DisplayField__c</fullName>
    <label>Display field settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>