force-app/main/default/objects/sansancard__TransferMeta__c/fields/sansancard__FieldValue__c.field-meta.xml
<CustomField>
    <fullName>sansancard__FieldValue__c</fullName>
    <label>Field value settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>