force-app/main/default/objects/sansancard__TransferMeta__c/fields/sansancard__MapValue__c.field-meta.xml
<CustomField>
    <fullName>sansancard__MapValue__c</fullName>
    <label>Map settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>